bk_ida/gccida/g1/memory_address
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:931:22: error: must use 'enum' tag to refer to type 'machine_mode'
rtx  memory_address( machine_mode mode, rtx x) 
                     ^
                     enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:943:4: error: expected ';' after expression
rtx constant_term; // [rsp+8h] [rbp-30h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:943:5: error: use of undeclared identifier 'constant_term'
rtx constant_term; // [rsp+8h] [rbp-30h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:959:19: error: use of undeclared identifier 'machine_mode'
v3 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), x); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:984:1: error: use of undeclared identifier 'constant_term'
constant_term = const_int_rtx[64]; 
^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:985:36: error: use of undeclared identifier 'constant_term'
v8 = eliminate_constant_term( v3, &constant_term); 
                                   ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:986:27: error: use of undeclared identifier 'constant_term'
if ( const_int_rtx[64] != constant_term 
                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:988:11: error: use of undeclared identifier 'constant_term'
&& ( v9 = constant_term, 
          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:990:31: error: use of undeclared identifier 'machine_mode'
v11 = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)v3 + 2), v10, v9), 
                              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:1011:19: error: use of undeclared identifier 'machine_mode'
v3 = force_reg( ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4), v3); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/explow.c:1062:29: error: use of undeclared identifier 'machine_mode'
if ( general_operand( v3, ( machine_mode)( ( ( target_flags & 0x2000000) != 0) + 4)) ) 
                            ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/memory_address/src/obj/explow.o] Error 1
